--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -47,6 +47,7 @@
     <color name="color_676767">#676767</color>
     <color name="color_4fad55">#4fad55</color>
     <color name="color_2d8bff">#2d8bff</color>
+    <color name="color_0082ff">#0082ff</color>
 
 
 </resources>
