--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,6 +48,8 @@
     <color name="color_4fad55">#4fad55</color>
     <color name="color_2d8bff">#2d8bff</color>
     <color name="color_0082ff">#0082ff</color>
+    <color name="color_333333">#333333</color>
+    <color name="color_e0e0e0">#E0E0E0</color>
 
 
 </resources>
