--- a/app/src/main/res/layout/item_weather_chat.xml
+++ b/app/src/main/res/layout/item_weather_chat.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white">
@@ -8,22 +10,28 @@
         android:id="@+id/chatlist_image_other"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_alignParentStart="true"
         android:layout_marginStart="23dp"
         android:layout_marginTop="20dp"
         android:src="@mipmap/aiui" />
 
-    <LinearLayout
+    <com.github.library.bubbleview.BubbleLinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/chatlist_image_other"
         android:layout_marginStart="10dp"
         android:layout_toEndOf="@id/chatlist_image_other"
-        android:background="@mipmap/chatfrom_bg_normal"
+        android:gravity="center"
         android:maxWidth="200dp"
         android:orientation="vertical"
-        android:paddingBottom="18dip"
-        android:paddingTop="8dip">
+        android:paddingTop="8dip"
+        app:arrowCenter="true"
+        app:arrowHeight="10dp"
+        app:arrowLocation="left"
+        app:arrowPosition="14dp"
+        app:arrowWidth="8dp"
+        app:bubbleColor="#7EC0EE">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -121,12 +129,14 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_margin="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
 
             <LinearLayout
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -183,6 +193,6 @@
 
         </LinearLayout>
 
-    </LinearLayout>
+    </com.github.library.bubbleview.BubbleLinearLayout>
 
 </RelativeLayout>
