--- a/app/src/main/res/layout/item_calc_chat.xml
+++ b/app/src/main/res/layout/item_calc_chat.xml
@@ -1,59 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white">
 
     <ImageView
         android:id="@+id/chatlist_image_other"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:layout_marginStart="23dp"
         android:layout_marginTop="20dp"
         android:src="@mipmap/aiui" />
-
 
 
     <com.zhengpu.aiui.ui.view.bubbleview.BubbleTextVew
         android:id="@+id/chatlist_text_other"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/chatlist_image_other"
         android:padding="10dp"
         android:text=""
-        android:layout_marginLeft="10dp"
-        android:layout_centerInParent="true"
-        android:layout_marginRight="10dp"
-        android:textColor="@android:color/white"
+        android:textColor="@color/white"
+        android:textSize="8sp"
         app:angle="8dp"
         app:arrowCenter="true"
         app:arrowHeight="10dp"
         app:arrowLocation="left"
-        app:arrowPosition="14dp"
-        app:arrowWidth="8dp"
-        app:bubbleColor="#CCCCCC" />
-
-
+        app:arrowPosition="10dp"
+        app:arrowWidth="15dp"
+        app:bubbleColor="@color/white"
+        app:strokeColor="#CCCCCC" />
 
 
     <!--<TextView-->
-        <!--android:id="@+id/chatlist_text_other"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignTop="@id/chatlist_image_other"-->
-        <!--android:layout_margin="10dp"-->
-        <!--android:layout_marginLeft="10dp"-->
-        <!--android:layout_toEndOf="@id/chatlist_image_other"-->
-        <!--android:background="@mipmap/chatfrom_bg_normal"-->
+    <!--android:id="@+id/chatlist_text_other"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignTop="@id/chatlist_image_other"-->
+    <!--android:layout_margin="10dp"-->
+    <!--android:layout_marginLeft="10dp"-->
+    <!--android:layout_toEndOf="@id/chatlist_image_other"-->
+    <!--android:background="@mipmap/chatfrom_bg_normal"-->
 
-        <!--android:maxWidth="200dp"-->
-        <!--android:paddingBottom="18dip"-->
-        <!--android:paddingTop="13dip"-->
-        <!--android:text="hewdfb" />-->
+    <!--android:maxWidth="200dp"-->
+    <!--android:paddingBottom="18dip"-->
+    <!--android:paddingTop="13dip"-->
+    <!--android:text="hewdfb" />-->
 
 
 </RelativeLayout>
