--- a/app/src/main/res/layout/item_news_chat.xml
+++ b/app/src/main/res/layout/item_news_chat.xml
@@ -62,6 +62,14 @@
 
         </RelativeLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_below="@+id/iv_picUrl"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:background="#F3F3F3" />
 
         <RelativeLayout
             android:id="@+id/rl_news_item1"
@@ -92,6 +100,17 @@
 
         </RelativeLayout>
 
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_below="@+id/iv_picUrl1"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:background="#F3F3F3" />
+
+
         <RelativeLayout
             android:id="@+id/rl_news_item2"
             android:layout_width="wrap_content"
@@ -120,6 +139,16 @@
                 android:text="VVVVVVVVVV" />
 
         </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="5dp"
+            android:layout_below="@+id/iv_picUr2"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="5dp"
+            android:background="#F3F3F3" />
+
 
         <RelativeLayout
             android:id="@+id/rl_news_item3"
@@ -150,6 +179,16 @@
 
         </RelativeLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_below="@+id/iv_picUrl3"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:background="#F3F3F3" />
+
+
         <RelativeLayout
             android:id="@+id/rl_news_item4"
             android:layout_width="wrap_content"
@@ -179,6 +218,9 @@
                 android:text="VVVVVVVVVV" />
 
         </RelativeLayout>
+
+
+
 
 
         <!--<android.support.v7.widget.RecyclerView-->
