--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,13 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+
+<style name="dialog" parent="@android:style/Theme.Dialog">
+<item name="android:windowFrame">@null</item><!--边框-->
+<item name="android:windowIsFloating">true</item><!--是否浮现在activity之上-->
+<item name="android:windowIsTranslucent">false</item><!--半透明-->
+<item name="android:windowNoTitle">true</item><!--无标题-->
+<item name="android:windowBackground">@drawable/mydialog</item>
+</style>
+
 </resources>
