打开外部爱奇艺APP

--- a/app/src/main/res/layout/commdialog.xml
+++ b/app/src/main/res/layout/commdialog.xml
@@ -36,7 +36,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
-            android:text="你还没酷狗音乐APP， 是否去下载该程序"
+            android:text=""
             android:textColor="@color/black"
             android:textSize="15sp" />
 
