整理代码 添加出行服务

--- a/app/src/main/res/layout/item_user_chat.xml
+++ b/app/src/main/res/layout/item_user_chat.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="23dp"
         android:layout_marginTop="29dp"
-        android:src="@mipmap/user_chat" />
+        android:src="@drawable/user_chat" />
 
 
     <com.zhengpu.aiui.ui.view.bubbleview.BubbleTextVew
