--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:background="@mipmap/voice" />
+                android:background="@drawable/voice" />
 
         </com.skyfishjy.library.RippleBackground>
 
@@ -77,7 +77,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="50dp"
             android:layout_marginStart="50dp"
-            android:src="@mipmap/phone_n"
+            android:src="@drawable/phone_n"
             tools:ignore="RtlHardcoded" />
 
 
@@ -101,7 +101,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_margin="5dp"
-                android:src="@mipmap/voice_n" />
+                android:src="@drawable/voice_n" />
 
 
         </com.skyfishjy.library.RippleBackground>
@@ -115,7 +115,7 @@
             android:layout_centerVertical="true"
             android:layout_marginEnd="50dp"
             android:layout_marginRight="50dp"
-            android:src="@mipmap/help_n"
+            android:src="@drawable/help_n"
             tools:ignore="RtlHardcoded" />
 
         <ImageView
@@ -127,7 +127,7 @@
             android:layout_marginRight="22dp"
             android:layout_toLeftOf="@+id/iv_help"
             android:layout_toStartOf="@+id/iv_help"
-            android:src="@mipmap/video_n"
+            android:src="@drawable/video_n"
             tools:ignore="RtlHardcoded" />
 
     </RelativeLayout>
