--- a/app/src/main/res/layout/common_toolbar.xml
+++ b/app/src/main/res/layout/common_toolbar.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@mipmap/return_n" />
+            android:src="@drawable/return_n" />
     </LinearLayout>
 
 
