--- a/app/src/main/res/layout/fragment_help_2.xml
+++ b/app/src/main/res/layout/fragment_help_2.xml
@@ -20,7 +20,7 @@
             android:gravity="center"
             android:text="你还可以这样对我说"
             android:textColor="@color/color_0082ff"
-            android:textSize="24sp" />
+            android:textSize="36sp" />
 
     </LinearLayout>
 
@@ -36,7 +36,7 @@
             android:id="@+id/iv_icon_music"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/icon_music" />
+            android:src="@drawable/icon_music" />
 
 
         <LinearLayout
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:text="音乐"
                 android:textColor="@color/color_333333"
-                android:textSize="12sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -60,7 +60,7 @@
                 android:layout_marginTop="7dp"
                 android:text="播放刘德华的忘情水"
                 android:textColor="@color/color_666666"
-                android:textSize="9sp" />
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -70,7 +70,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="65dp"
-            android:src="@mipmap/down" />
+            android:src="@drawable/down" />
 
     </RelativeLayout>
 
@@ -97,7 +97,7 @@
             android:id="@+id/iv_icon_weatch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/icon_weatch" />
+            android:src="@drawable/icon_weatch" />
 
 
         <LinearLayout
@@ -112,7 +112,7 @@
                 android:layout_height="wrap_content"
                 android:text="天气"
                 android:textColor="@color/color_333333"
-                android:textSize="12sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -121,7 +121,7 @@
                 android:layout_marginTop="7dp"
                 android:text="今天天气好吗?"
                 android:textColor="@color/color_666666"
-                android:textSize="9sp" />
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -132,7 +132,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="65dp"
-            android:src="@mipmap/down" />
+            android:src="@drawable/down" />
 
     </RelativeLayout>
 
@@ -159,7 +159,7 @@
             android:id="@+id/iv_icon_web_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/icon_web_search" />
+            android:src="@drawable/icon_web_search" />
 
 
         <LinearLayout
@@ -174,7 +174,7 @@
                 android:layout_height="wrap_content"
                 android:text="网络搜索"
                 android:textColor="@color/color_333333"
-                android:textSize="12sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -183,7 +183,7 @@
                 android:layout_marginTop="7dp"
                 android:text="上网查找北极熊"
                 android:textColor="@color/color_666666"
-                android:textSize="9sp" />
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -193,7 +193,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="65dp"
-            android:src="@mipmap/down" />
+            android:src="@drawable/down" />
 
     </RelativeLayout>
 
@@ -220,7 +220,7 @@
             android:id="@+id/iv_icon_nearby"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/icon_nearby" />
+            android:src="@drawable/icon_nearby" />
 
 
         <LinearLayout
@@ -235,7 +235,7 @@
                 android:layout_height="wrap_content"
                 android:text="如何查找附近信息"
                 android:textColor="@color/color_333333"
-                android:textSize="12sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -244,7 +244,7 @@
                 android:layout_marginTop="7dp"
                 android:text="附近有什么时候好吃"
                 android:textColor="@color/color_666666"
-                android:textSize="9sp" />
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -255,7 +255,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="65dp"
-            android:src="@mipmap/down" />
+            android:src="@drawable/down" />
 
     </RelativeLayout>
 
@@ -282,7 +282,7 @@
             android:id="@+id/iv_icon_story"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/icon_story" />
+            android:src="@drawable/icon_story" />
 
 
         <LinearLayout
@@ -297,7 +297,7 @@
                 android:layout_height="wrap_content"
                 android:text="如何听故事"
                 android:textColor="@color/color_333333"
-                android:textSize="12sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -306,7 +306,7 @@
                 android:layout_marginTop="7dp"
                 android:text="我想听安徒生的故事"
                 android:textColor="@color/color_666666"
-                android:textSize="9sp" />
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -316,7 +316,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="65dp"
-            android:src="@mipmap/down" />
+            android:src="@drawable/down" />
 
     </RelativeLayout>
 
