--- a/app/src/main/res/layout/item_baike_chat.xml
+++ b/app/src/main/res/layout/item_baike_chat.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="23dp"
         android:layout_marginTop="20dp"
-        android:src="@mipmap/aiui" />
+        android:src="@drawable/aiui" />
 
 
     <LinearLayout
@@ -22,7 +22,7 @@
         android:layout_alignTop="@id/chatlist_image_other"
         android:layout_marginStart="10dp"
         android:layout_toEndOf="@id/chatlist_image_other"
-        android:background="@mipmap/chatfrom_bg_normal"
+        android:background="@drawable/chatfrom_bg_normal"
         android:orientation="vertical"
         android:paddingBottom="18dip"
         android:paddingTop="8dip">
@@ -66,7 +66,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/aiui" />
+                android:src="@drawable/aiui" />
 
 
         </LinearLayout>
