--- a/app/src/main/res/layout/item_calc_chat.xml
+++ b/app/src/main/res/layout/item_calc_chat.xml
@@ -14,7 +14,7 @@
         android:layout_centerVertical="true"
         android:layout_marginStart="23dp"
         android:layout_marginTop="20dp"
-        android:src="@mipmap/aiui" />
+        android:src="@drawable/aiui" />
 
 
     <com.zhengpu.aiui.ui.view.bubbleview.BubbleTextVew
