--- a/app/src/main/res/layout/item_weather_chat.xml
+++ b/app/src/main/res/layout/item_weather_chat.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="23dp"
         android:layout_marginTop="20dp"
-        android:src="@mipmap/aiui" />
+        android:src="@drawable/aiui" />
 
     <com.zhengpu.aiui.ui.view.bubbleview.BubbleLinearLayout
         android:layout_width="wrap_content"
@@ -79,7 +79,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:src="@mipmap/location" />
+                        android:src="@drawable/location" />
 
                     <TextView
                         android:id="@+id/tv_city"
@@ -103,7 +103,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:src="@mipmap/weather" />
+                        android:src="@drawable/weather" />
 
                     <TextView
                         android:id="@+id/tv_weather"
