转变框架前备份

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -50,7 +50,7 @@
     <color name="color_0082ff">#0082ff</color>
     <color name="color_333333">#333333</color>
     <color name="color_e0e0e0">#E0E0E0</color>
-
+    <color name="color_1a1a1a">#1A1A1A</color>
 
 
 
