--- a/app/src/main/res/layout/item_joke_chat.xml
+++ b/app/src/main/res/layout/item_joke_chat.xml
@@ -27,9 +27,9 @@
         android:orientation="vertical"
         android:paddingTop="8dip"
         app:arrowCenter="true"
-        app:arrowHeight="10dp"
+        app:arrowHeight="5dp"
         app:arrowLocation="left"
-        app:arrowPosition="105dp"
+        app:arrowPosition="40dp"
         app:arrowWidth="15dp"
         app:bubbleColor="@color/white"
         app:strokeColor="#CCCCCC">
@@ -37,7 +37,7 @@
         <RelativeLayout
             android:id="@+id/rl_joke_item"
             android:layout_width="wrap_content"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp">
@@ -48,9 +48,11 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
+                android:maxWidth="500dp"
                 android:text="" />
 
             <TextView
+                android:maxWidth="500dp"
                 android:id="@+id/tv_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
