--- a/app/src/main/res/layout/item_news_chat.xml
+++ b/app/src/main/res/layout/item_news_chat.xml
@@ -28,7 +28,7 @@
         app:arrowCenter="true"
         app:arrowHeight="10dp"
         app:arrowLocation="left"
-        app:arrowPosition="165dp"
+        app:arrowPosition="200dp"
         app:arrowWidth="15dp"
         app:bubbleColor="@color/white"
         app:strokeColor="#CCCCCC">
@@ -38,11 +38,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
+            android:layout_marginRight="5dp"
             android:layout_marginTop="10dp">
 
             <ImageView
                 android:id="@+id/iv_picUrl"
-                android:layout_width="60dp"
+                android:layout_width="100dp"
                 android:layout_height="60dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
@@ -58,7 +59,10 @@
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="11dp"
                 android:layout_toRightOf="@+id/iv_picUrl"
-                android:text="VVVVVVVVVV" />
+                android:maxLines="2"
+                android:text=""
+                android:textColor="@color/color_1a1a1a"
+                android:textSize="12sp" />
 
         </RelativeLayout>
 
@@ -66,9 +70,9 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_below="@+id/iv_picUrl"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginLeft="25dp"
             android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
             android:background="#F3F3F3" />
 
         <RelativeLayout
@@ -76,11 +80,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
+            android:layout_marginRight="5dp"
             android:layout_marginTop="10dp">
 
             <ImageView
                 android:id="@+id/iv_picUrl1"
-                android:layout_width="60dp"
+                android:layout_width="100dp"
                 android:layout_height="60dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
@@ -96,7 +101,10 @@
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="11dp"
                 android:layout_toRightOf="@+id/iv_picUrl1"
-                android:text="VVVVVVVVVV" />
+                android:text=""
+                android:maxLines="2"
+                android:textColor="@color/color_1a1a1a"
+                android:textSize="12sp" />
 
         </RelativeLayout>
 
@@ -105,9 +113,9 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_below="@+id/iv_picUrl1"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginLeft="25dp"
             android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
             android:background="#F3F3F3" />
 
 
@@ -116,11 +124,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
+            android:layout_marginRight="5dp"
             android:layout_marginTop="10dp">
 
             <ImageView
                 android:id="@+id/iv_picUrl2"
-                android:layout_width="60dp"
+                android:layout_width="100dp"
                 android:layout_height="60dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
@@ -136,17 +145,20 @@
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="11dp"
                 android:layout_toRightOf="@+id/iv_picUrl2"
-                android:text="VVVVVVVVVV" />
+                android:text=""
+                android:maxLines="2"
+                android:textColor="@color/color_1a1a1a"
+                android:textSize="12sp" />
 
         </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:layout_marginTop="5dp"
             android:layout_below="@+id/iv_picUr2"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="25dp"
             android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
             android:background="#F3F3F3" />
 
 
@@ -155,11 +167,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
+            android:layout_marginRight="5dp"
             android:layout_marginTop="10dp">
 
             <ImageView
                 android:id="@+id/iv_picUrl3"
-                android:layout_width="60dp"
+                android:layout_width="100dp"
                 android:layout_height="60dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
@@ -175,7 +188,10 @@
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="11dp"
                 android:layout_toRightOf="@+id/iv_picUrl3"
-                android:text="VVVVVVVVVV" />
+                android:text=""
+                android:maxLines="2"
+                android:textColor="@color/color_1a1a1a"
+                android:textSize="12sp" />
 
         </RelativeLayout>
 
@@ -183,9 +199,9 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_below="@+id/iv_picUrl3"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginLeft="25dp"
             android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
             android:background="#F3F3F3" />
 
 
@@ -195,11 +211,12 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="25dp"
+            android:layout_marginRight="5dp"
             android:layout_marginTop="10dp">
 
             <ImageView
                 android:id="@+id/iv_picUrl4"
-                android:layout_width="60dp"
+                android:layout_width="100dp"
                 android:layout_height="60dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
@@ -214,22 +231,44 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="11dp"
+                android:maxLines="2"
                 android:layout_toRightOf="@+id/iv_picUrl4"
-                android:text="VVVVVVVVVV" />
+                android:text=""
+                android:textColor="@color/color_1a1a1a"
+                android:textSize="12sp" />
+
 
         </RelativeLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_below="@+id/iv_picUrl3"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:background="#F3F3F3" />
 
 
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="right">
 
-        <!--<android.support.v7.widget.RecyclerView-->
-        <!--android:layout_gravity="center"-->
-        <!--android:id="@+id/rv_news"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
 
-        <!--</android.support.v7.widget.RecyclerView>-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="查看更多热门新闻"
+                android:textColor="@color/color_2d8bff"
+                android:textSize="10sp" />
+
+        </RelativeLayout>
 
 
     </com.zhengpu.aiui.ui.view.bubbleview.BubbleLinearLayout>
